@@ -14,9 +14,10 @@ import com.example.memo.memo.models.SearchMemoResponse;
 import com.example.memo.memo.models.UpdateMemoRequest;
 import com.example.memo.memo.models.UpdateMemoResponse;
 import com.example.memo.memo.service.exception.MemoNotFoundException;
-import com.example.memo.memo.service.models.AiSaveResponse;
+import com.example.memo.memo.service.models.AiCreateResponse;
 import com.example.memo.memo.service.models.AiSearchResponse;
 import com.example.memo.memo.service.models.Memo;
+import com.example.memo.memo.service.models.Tag;
 
 import lombok.RequiredArgsConstructor;
 
@@ -25,6 +26,7 @@ import lombok.RequiredArgsConstructor;
 public class MemoService {
 
     private final MemoRepository memoRepository;
+    private final TagRepository tagRepository;
     private final AiMemoClient aiMemoClient;
 
     public List<MemoResponse> getAllMemos() {
@@ -34,13 +36,37 @@ public class MemoService {
     }
 
     public CreateMemoResponse createMemo(CreateMemoRequest createMemoRequest) {
-        AiSaveResponse aiSaveResponse = aiMemoClient.getTags(createMemoRequest.content());
-        Memo memo = createMemoRequest.toMemo(
-            aiSaveResponse.memoId(),
-            aiSaveResponse.tags()
-        );
+        AiCreateResponse aiCreateResponse = aiMemoClient.createMemo(createMemoRequest.content());
+
+        Memo memo = createMemoRequest.toMemo(aiCreateResponse.memoEmbeddings());
         Memo savedMemo = memoRepository.save(memo);
-        return CreateMemoResponse.from(savedMemo);
+
+        List<Tag> tags = new ArrayList<>();
+
+        // 이미 존재하는 태그들 : 필드에 메모 id 추가
+        for (String tagId : aiCreateResponse.existingTagIds()) {
+            Tag existingTag = tagRepository.findById(tagId)
+                .orElseThrow(() -> new MemoNotFoundException("태그를 찾지 못했습니다: " + tagId));
+            existingTag.addMemoId(savedMemo.getId());
+            Tag savedTag = tagRepository.save(existingTag);
+            tags.add(savedTag);
+        }
+
+        // 새로운 태그들 : 필드에 메모 id 추가, 메모에 tag ids 추가
+        List<String> tagIds = new ArrayList<>(aiCreateResponse.existingTagIds());
+        for (AiCreateResponse.InnerTag tag : aiCreateResponse.newTags()) {
+            Tag newTag = Tag.builder()
+                .name(tag.name())
+                .memos(List.of(savedMemo.getId()))
+                .embedding(tag.embedding())
+                .build();
+            Tag savedTag = tagRepository.save(newTag);
+            tagIds.add(savedTag.getId());
+            tags.add(savedTag);
+        }
+        savedMemo.updateTags(tagIds);
+        memoRepository.save(savedMemo);
+        return CreateMemoResponse.from(savedMemo, tags);
     }
 
     public SearchMemoResponse searchMemo(SearchMemoRequest searchMemoRequest) {
@@ -52,17 +78,27 @@ public class MemoService {
             case "tag" -> memos.addAll(searchMemoByTag(aiSearchResponse.tags()));
             default -> throw new MemoNotFoundException("메모를 찾지 못했습니다.");
         }
-        return SearchMemoResponse.from(aiSearchResponse.processedMessage(), memos);
+
+        List<List<Tag>> tags = memos.stream()
+            .map(memo -> tagRepository.findAllById(memo.getTags()))
+            .toList();
+
+        return SearchMemoResponse.from(aiSearchResponse.processedMessage(), memos, tags);
     }
 
     public UpdateMemoResponse updateMemo(String memoId, UpdateMemoRequest updateMemoRequest) {
         Memo memo = memoRepository.getById(memoId);
-        memo.update(
-            updateMemoRequest.content(),
-            updateMemoRequest.tags()
-        );
+        /* TODO 업데이트 기능 논의 필요
+        memo.update(updateMemoRequest);
+
+        List<Tag> tags = updateMemoRequest.getTags().stream()
+                .map(tagId -> tagRepository.getById(tagId))
+                .collect(Collectors.toList());
+
+        memo.setTags(tags.stream().map(Tag::getId).collect(Collectors.toList()));
         Memo updatedMemo = memoRepository.save(memo);
-        return UpdateMemoResponse.from(updatedMemo);
+         */
+        return UpdateMemoResponse.from(memo);
     }
 
     public void deleteMemo(String memoId) {
@@ -71,9 +107,12 @@ public class MemoService {
     }
 
     private List<Memo> searchMemoByIdList(List<String> ids) {
+        for (String id : ids) {
+            System.out.println(id);
+        }
         return ids.stream()
             .map(memoRepository::getById)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<Memo> searchMemoByRegex(String regex) {
@@ -83,6 +122,6 @@ public class MemoService {
     private List<Memo> searchMemoByTag(List<String> tags) {
         return tags.stream()
             .flatMap(tag -> memoRepository.getByTagsContaining(tag).stream())
-            .collect(Collectors.toList());
+            .toList();
     }
 }
